sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:5: error: too many arguments for method insertionSort: ()Unit
    insertionSort(ecart)
                 ^